--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,9 +2,15 @@
     margin: 10px 0;
 }
 
-.nav nav-pills{
-    margin: 0 auto;
-    display: table;
-    table-layout: fixed;
-    float:none;
+.showcontent img {
+    max-width:100%;
+    max-height: 500px;
+    margin-left: 50px;
 }
+
+.showcontent p {
+    margin-top: 20px;
+    margin-left: 50px;
+    font-size: 20px;
+}
+
