--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,12 +5,34 @@
 .showcontent img {
     max-width:100%;
     max-height: 500px;
-    margin-left: 50px;
+    margin-left: 70px;
 }
 
 .showcontent p {
     margin-top: 20px;
-    margin-left: 50px;
-    font-size: 20px;
+    margin-left: 100px;
+    font-size: 16px;  
 }
 
+.pagetop {
+    border-top: solid 1px #C0C0C0;
+    border-bottom: solid 1px #C0C0C0;
+    margin-bottom: 30px;
+    max-width: 500px;
+}
+
+.img-responsive {
+    margin-top: 15px;
+}
+
+.follow-button {
+    margin-bottom: 15px;
+}
+
+.follow-nav{
+    margin: 10px 0;
+}
+
+.nav-images{
+    margin-top: 10px;
+}
